<resources>
    <string name="app_name">DatabasePractice1</string>
    <string name="author">Author Name</string>
    <string name="add">Add</string>
    <string name="quote">Quote</string>
    <string name="find">Find</string>
    <string name="quoteDeleted">Quote has been deleted</string>
    <string name="delete">Delete</string>
    <string name="uploadAuthor">Enter author: </string>
    <string name="uploadQuote">Enter quote: </string>
    <string name="retrieveQuote">Enter author name to retrieve quote</string>
    <string name="deleteQuote">Enter author to delete his quote</string>
    <string name="noMatch">No match found</string>
    <string name="title_activity_second">Second Activity</string>
</resources>
